--- a/src/pages/onePizza/onePizza.module.scss
+++ b/src/pages/onePizza/onePizza.module.scss
@@ -13,8 +13,8 @@
 }
 .content__items {
   display: flex;
-  gap: 6rem; /* Расстояние между элементами */
-  align-items: flex-start; /* Выравнивание элементов по верхнему краю */
+  gap: 6rem;
+  align-items: flex-start; 
 }
 
 .contentBottom {
