--- a/src/pages/onePizza/onePizza.module.scss
+++ b/src/pages/onePizza/onePizza.module.scss
@@ -6,14 +6,16 @@
   margin-top: 5rem;
   margin-bottom: 8rem;
   transition: all 0.2s ease-in-out;
-  h1 {
+  h2 {
   font-size: 2rem;
   text-align: justify;
+  font-family: 'Lora', serif;
+  font-weight: normal;
  }
 }
 .content__items {
   display: flex;
-  gap: 6rem;
+  gap: 4rem;
   align-items: flex-start; 
 }
 
